[GTK] AX: AtspiCollection is not implemented on the document https://bugs.webkit.org/show_bug.cgi?id=240517

Reviewed by Adrian Perez de Castro.

Add initial implementation of Collection interface. Only GetMatches
method is implemented, since it's the only one used by orca (the only
user of the collection interface too).

Source/WebCore:

* SourcesGTK.txt:
* SourcesWPE.txt:
* accessibility/atspi/AccessibilityAtspiEnums.h:
* accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::AccessibilityObjectAtspi::interfacesForObject):
(WebCore::AccessibilityObjectAtspi::registerObject):
(WebCore::AccessibilityObjectAtspi::buildInterfaces const):
* accessibility/atspi/AccessibilityObjectAtspi.h:
* accessibility/atspi/AccessibilityObjectCollectionAtspi.cpp: Added.
(WebCore::AccessibilityObjectAtspi::CollectionMatchRule::CollectionMatchRule):
(WebCore::AccessibilityObjectAtspi::CollectionMatchRule::matchInterfaces):
(WebCore::AccessibilityObjectAtspi::CollectionMatchRule::matchStates):
(WebCore::AccessibilityObjectAtspi::CollectionMatchRule::matchRoles):
(WebCore::AccessibilityObjectAtspi::CollectionMatchRule::matchAttributes):
(WebCore::AccessibilityObjectAtspi::CollectionMatchRule::match):
(WebCore::AccessibilityObjectAtspi::addMatchesInCanonicalOrder):
(WebCore::AccessibilityObjectAtspi::matches):
* accessibility/atspi/xml/Collection.xml:

Tools:
* TestWebKitAPI/Tests/WebKitGtk/TestWebKitAccessibility.cpp:
(testCollectionGetMatches):
(beforeAll):

Canonical link: https://commits.webkit.org/251906@main